[package]
name = "openrpc-types"
version = "0.2.0"
edition = "2021"
description = "A transcription of types from the OpenRPC Specification"
license = "MIT OR Apache-2.0"
homepage = "https://crates.io/crates/openrpc-types"
documentation = "https://docs.rs/openrpc-types"
repository = "https://github.com/aatifsyed/openrpc-types"
categories = ["development-tools", "network-programming", "web-programming"]
keywords = ["openrpc", "api"]

[dependencies]
schemars = "0.8.16"
semver = { version = "1.0.23", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.117"
url = { version = "2.5.0", features = ["serde"] }

[dev-dependencies]
serde_path_to_error = "0.1.16"
