[package]
name = "openrpc-types"
version = "0.5.0"
edition = "2021"
description = "A transcription of types from the OpenRPC Specification"
license = "MIT OR Apache-2.0"
homepage = "https://crates.io/crates/openrpc-types"
documentation = "https://docs.rs/openrpc-types"
repository = "https://github.com/aatifsyed/openrpc-types"
categories = ["development-tools", "network-programming", "web-programming"]
keywords = ["openrpc", "api"]

[dependencies]
semver = { version = "1.0.23", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.117"
url = { version = "2.5.0", features = ["serde"] }
schemars08 = { package = "schemars", version = "0.8", optional = true }
schemars09 = { package = "schemars", version = "0.9", optional = true }
schemars1 = { package = "schemars", version = "1", optional = true }

[dev-dependencies]
expect-test = "1.5.0"
proc-macro2 = { version = "1.0.85", default-features = false, features = [
    "span-locations",
] }
regex = "1.10.5"
serde_path_to_error = "0.1.16"
syn = { version = "2.0.66", features = ["full"] }

[features]
schemars08 = ["dep:schemars08"]
schemars09 = ["dep:schemars09"]
schemars1 = ["dep:schemars1"]

[workspace]
members = ["gen"]
